--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@
     padding: 38px 0px 47px;
 }
 
-.header__flex, .footer__flex, .about{
+.header__flex, .footer__flex, .about, .subscribe, .plan__flax{
     display: flex; /* растягиваем три элемента в длину */
     justify-content: space-between; /* задаем расстояние между дивами*/
     align-items: center; /* центрируем*/
@@ -102,4 +102,112 @@
     border: 1px solid #5454D4;
     margin-left: 35px;
 }
+
+.subscribe{
+    margin-bottom: 85px;
+}
+
+.subscribe__title{
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 57px;
+    letter-spacing: -1.56316px;
+    color: #19191B;
+    margin-bottom: 38px;
+}
+
+.input{
+    width: 302px;
+    height: 60px;
+    border: 1px solid #7087FF;
+    border-radius: 10px;
+    padding-left: 14px;
+    box-sizing: border-box; /* свойство которое учитывает ширину паддинга и бордера*/
+    margin-right: 39px;
+}
+
+.input::placeholder, .input{ /* параметры для надписи Email*/
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: -0.531474px;
+    color: #000000;
+}
+/*убираем черную границу инпута*/
+.input:focus{
+    outline: none;
+}
+
+.plan__title{
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 70px;
+    letter-spacing: -1.87579px;
+    color: #19191B;
+    margin-bottom: 110px;
+    max-width: 504px;
+
+}
+
+.item{
+    background: #F8F8F8;
+    border-radius: 10px;
+    width: 330px;
+    padding: 34px 0 37px;
+    text-align: center;
+}
+
+.item__text{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.562737px;
+    color: #696871;
+}
+
+.item__title{
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 56px;
+    letter-spacing: -1.03448px;
+    color: #1D293F;
+
+}
+
+.item__title span{
+    font-size: 28px;
+}
+
+.item__li{
+    list-style: none;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 50px;
+    letter-spacing: -0.531474px;
+    color: #696871;
+}
+
+.button__item{
+    width: 285px;
+    background: white;
+    color: #5454D4;
+    margin-top: 36px;
+}
+
+.item:hover{
+    transition: 500;
+    background: #FF7143;
+    box-shadow: 0px 32px 34px rgba(255, 112, 59, 0.317827);
+}
+
+.item:hover .item__text, .item:hover .item__li, .item:hover .item__title {
+    color: white;
+    transition: 500;
+    }
+
+.item:hover .button__item{
+    transition: 500;
+    background: #9F3919;
+    color: white;
+
 }
